--- a/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
@@ -53,8 +53,8 @@
   <string name="bcc_label">"Bcc: "</string>
   <string name="block_messaging_entry_title">Estettiin tekstiviesti</string>
   <string name="block_support_text">Antiy:n tukema.</string>
-  <string name="bookmark">Lisää suosikkeihin</string>
-  <string name="bookmark_confirm_delete_message">Poista valitut viestit suosikeista?</string>
+  <string name="bookmark">Lisättiin suosikkeihin</string>
+  <string name="bookmark_confirm_delete_message">Poistetaanko valitut viestit suosikeista?</string>
   <string name="bookmark_empty">Ei viestejä suosikeissa</string>
   <string name="bookmark_list_title">Suosikit</string>
   <string name="button_emoji_creature">Eläinemojit</string>
@@ -148,9 +148,9 @@
   <string name="delivery_toast_body">%s vastaanotti viestin</string>
   <string name="delivery_toast_body_more">%1$s ja %2$d henkilö(ä) vastaanotti viestin</string>
   <string name="dialog_message_fake_cell_detect_error">Haluatko korjata tämän viestin virheitä? MIUI:n tulee lähettää puhelinnumero (%1$s), viestin sisältö ja sijaintitiedot palvelimilleen tehdäkseen tämän.</string>
-  <string name="dialog_message_mx">Mi Viestin avulla voit lähettää viestejä toisille MIUI-laitteille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä.</string>
-  <string name="dialog_message_networking">Viestisovelluksen on yhdistettävä internetiin ja saatava sijaintitietosi, jotta se voi tarjota Älykästä Viestintää, Lähettäjän ID-tunnistuksen ja muita palveluita. Hyväksytkö?</string>
-  <string name="dialog_message_rcs">China Mobile:n viestinnän avulla voit lähettää viestejä toisille China Mobile -käyttäjille ilman maksuja. Sinun täytyy hyväksyä \"%1$s\" ennen China Mobile viestinnän käyttämistä.</string>
+  <string name="dialog_message_mx">Mi Viestin avulla voit lähettää viestejä toisille MIUI-käyttäjille ilman maksuja. Mi Viestin aktivoimiseen vaaditaan lähtevä tekstiviesti. Operaattorisi veloittaa sinua tästä viestistä. Sinun täytyy hyväksyä meidän \"%1$s\" ja \"%2$s\" ennen Mi Viestin käyttämistä.</string>
+  <string name="dialog_message_networking">Viestisovelluksen täytyy käyttää Keltaisiasivuja tarjotakseen Lähettäjän ID-tunnistuksen. Viestisovelluksen ja Keltaisensivujen on yhdistettävä internetiin ja saatava sijaintitietosi toimiakseen normaalisti. Hyväksytkö?</string>
+  <string name="dialog_message_rcs">China Mobile:n viestinnän avulla voit lähettää viestejä toisille China Mobile -käyttäjille Mannerkiinassa ilman maksuja. Sinun täytyy hyväksyä \"%1$s\" ennen China Mobile viestinnän käyttämistä.</string>
   <string name="dialog_message_sms_report">Roskaviestit ja lähettäjän tiedot lähetetään MIUI:lle, kun ilmoitat niistä. Niitä käytetään vain parantaakseen MIUI:n roskaviestin suodattimia.</string>
   <string name="dialog_title_fake_cell_detect_error">Korjaaminen</string>
   <string name="dialog_title_mx_rcs">Mi Viesti</string>
@@ -178,15 +178,15 @@
   <string name="edit_slide_activity">Muokkaa diaa</string>
   <string name="edit_slideshow_activity">Muokkaa diaesitystä</string>
   <string name="enabled">Päällä</string>
-  <string name="english_subject_limit">40 merkin raja</string>
+  <string name="english_subject_limit">40 merkkiä</string>
   <string name="enter_edit_mode">Muokkaa viestejä</string>
   <string name="error_code_label">"Virhekoodi: "</string>
   <string name="error_state">Epävakaa tila</string>
   <string name="error_state_text">Palstojen ja vastaanottajien tila on epävakaa. Ota bugiraportti ja raportoi se käyttäen http://go/droidanizer</string>
-  <string name="error_timed_msg">Aika on väärä.</string>
+  <string name="error_timed_msg">Virheellinen aika</string>
   <string name="ex_type_guide">Tiedot</string>
   <string name="ex_type_mx">Mi Viesti</string>
-  <string name="ex_type_sms">SMS/MMS</string>
+  <string name="ex_type_sms">Tekstiviesti/Multimediaviesti</string>
   <string name="exceed_length_limit">超出最大长度界限</string>
   <string name="exceed_message_size_limitation">Viestin koon raja saavutettu.</string>
   <string name="exceed_message_size_limitation_add_slide">Viestin koko ei ole tarpeeksi iso dian lisäämiselle</string>
@@ -202,7 +202,7 @@
   <string name="fake_cell_checking_hint">Tarkistetaan turvallisuutta…</string>
   <string name="fake_cell_safe_hint">Tämä viesti on turvallinen</string>
   <string name="fake_cell_timeout_hint">Turvallisuuden tarkastaminen epäonnistui</string>
-  <string name="favorite_at_time">Lisätty suosikkeihin klo: %1s</string>
+  <string name="favorite_at_time">Lisättiin suosikkeihin klo: %1s</string>
   <string name="fdn_check_failure">Voit lähettää vain viestejä sallittuihin numeroihin.</string>
   <string name="festival_sms_loading">Ladataan…</string>
   <string name="fetion_prefix">[Fetion]</string>
@@ -249,7 +249,7 @@
   <string name="hybrid_pull_to_refresh_release_label">Päivitä päästämällä irti…</string>
   <string name="hybrid_service_unavailiable">Palvelu ei ole käytettävissä</string>
   <string name="hybrid_try_again">Yritä uudelleen</string>
-  <string name="i_know">OK</string>
+  <string name="i_know">Selvä</string>
   <string name="importing_progress_private_message">Tuodaan…</string>
   <string name="in_sms">Viesti</string>
   <string name="insufficient_drm_rights">Havaittiin riittämättömät DRM oikeudet.</string>
@@ -263,6 +263,7 @@
   <string name="loading_conversations">Odota hetki…</string>
   <string name="loading_mms">Odota hetki…</string>
   <string name="manage_permission_app_label">Laitteen käyttöoikeudet</string>
+  <string name="mark_number_by_own_dialog_subtitle">Merkattu %1$s</string>
   <string name="me">Minä</string>
   <string name="menu_add_black">Estä tämä numero</string>
   <string name="menu_add_contact">Lisää olemassa olevaan yhteystietoon</string>
@@ -272,7 +273,7 @@
   <string name="menu_delete_messages">Poista viestejä</string>
   <string name="menu_edit">Muokkaa</string>
   <string name="menu_forward">Välitä</string>
-  <string name="menu_lock">Suosikki</string>
+  <string name="menu_lock">Lisää suosikkeihin</string>
   <string name="menu_mark">Merkitse</string>
   <string name="menu_more">Lisää</string>
   <string name="menu_new_contact">Uusi yhteystieto</string>
@@ -324,7 +325,7 @@
   <string name="multimedia_message">Multimediaviesti</string>
   <string name="multimedia_notification">Multimediaviestin ilmoitus</string>
   <string name="mx2_type_description">[%s]</string>
-  <string name="mx_activate_allow_notice">Lähtevä tekstiviesti saatetaan vaatia ilmaisten viesti- ja äänipalvelun aktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä.</string>
+  <string name="mx_activate_allow_notice">Lähtevä tekstiviesti saatetaan vaatia ilmaisten viesti- ja äänipalvelun aktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä. Sitä paitsi tämän ominaisuuden ollessa käytössä, mobiilidataa vaaditaan pieni määrä, jotta voidaan tarkistaa onko toinen käyttäjä online-tilassa. Hyväksytäänkö?
   <string name="mx_activate_dlg_title">Aktivoi Mi Viesti</string>
   <string name="mx_activate_dlg_title_ex">Aktivoi Mi Viesti &amp; Ääni</string>
   <string name="mx_activate_error_malformed_info">Sinun täytyy aktivoida Mi Viesti uudelleen.</string>
@@ -337,7 +338,7 @@
   <string name="mx_activate_int_hint_malformed_info">Lähtevä kansainvälinen tekstiviesti saatetaan vaatia Mi Viestin uudelleenaktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä.</string>
   <string name="mx_activate_int_hint_server">Lähtevä kansainvälinen tekstiviesti saatetaan vaatia Mi Viestin uudelleenaktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä.</string>
   <string name="mx_activate_int_hint_sim_change">Näyttää siltä, että olet vaihtanut SIM-kortteja. Lähtevä tekstiviesti saatetaan vaatia Mi Viestin uudelleenaktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä.</string>
-  <string name="mx_activate_network_allow_notice">Tämä palvelu vaatii pääsyn mobiilidataan toimiakseen normaalisti.</string>
+  <string name="mx_activate_network_allow_notice">Tämän ominaisuuden ollessa käytössä, pieni määrä mobiilidataa vaaditaan, jotta voidaan tarkistaa onko toinen käyttäjä online-tilassa. Hyväksytäänkö?</string>
   <string name="mx_activate_status_desc_activating_now">Aktivoidaan…</string>
   <string name="mx_activate_status_desc_check_net_connection">Verkkoyhteyttä ei voitu muodostaa</string>
   <string name="mx_activate_status_desc_fail">Mi Viestin aktivointi epäonnistui</string>
@@ -355,7 +356,7 @@
   <string name="mx_current_status">Asetukset</string>
   <string name="mx_dspt">Lähetä teksti- ja multimediaviestejä toisiin MIUI laitteisiin ilman lisäkustannuksia, kun olet yhteydessä Wi-Fi-verkkoon.</string>
   <string name="mx_dspt_listview">Lähetä viestejä toisiin MIUI laitteisiin ilman lisäkustannuksia</string>
-  <string name="mx_dspt_provision">Mi Viestillä voit lähettää viestejä toisille MIUI käyttäjille ilman lisäkustannuksia. Lähtevä tekstiviesti saatetaan vaatia Mi Viestin uudelleenaktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä. Lisäksi tämä palvelu tarvitsee pääsyn mobiilidataan toimiakseen normaalisti.</string>
+  <string name="mx_dspt_provision">Mi Viestillä voit lähettää viestejä toisille MIUI käyttäjille ilman lisäkustannuksia. Lähtevä tekstiviesti saatetaan vaatia Mi Viestin uudelleenaktivoimista varten. Operaattorisi veloittaa sinua tästä viestistä. Lisäksi tämän ominaisuuden ollessa käytössä, pieni määrä mobiilidataa vaaditaan, jotta voidaan tarkistaa onko toinen käyttäjä online-tilassa. Hyväksytäänkö?</string>
   <string name="mx_dspt_provision_ex2">Tietosuojakäytäntö</string>
   <string name="mx_enable">Mi Viesti</string>
   <string name="mx_enable_ex">Mi Viesti &amp; Ääni</string>
@@ -373,7 +374,7 @@
   <string name="mx_reactivate">Aktivoi Mi Viesti uudelleen</string>
   <string name="mx_recommend_msg">Ota Mi Viesti käyttöön napauttamalla.</string>
   <string name="mx_stranger_recommend_msg">Estä Mi Viestit tuntemattomilta numeroilta napauttamalla</string>
-  <string name="mx_type_guide">Mi Viestillä voit lähettää viestejä toisille MIUI:n käyttäjille ilman lisäkustannuksia</string>
+  <string name="mx_type_guide">Lähetä viestejä toisille MIUI-laitteille ilman lisäkustannuksia</string>
   <string name="need_download">Synkronoidaan…</string>
   <string name="network_error_description">Tapahtui verkkovirhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="networking_allow_continue">Salli</string>
@@ -383,14 +384,14 @@
   <string name="new_message">Kirjoita</string>
   <string name="new_message_arrived">Sinulla on uusi viesti</string>
   <string name="new_phrase">Lisää vastaus</string>
-  <string name="new_phrase_hint">Syötä uusi vastaus</string>
+  <string name="new_phrase_hint">Anna uusi vastaus</string>
   <string name="no">Peruuta</string>
   <string name="no_block_button_msg">Poista esto</string>
   <string name="no_conversations">Ei keskusteluja</string>
   <string name="no_delivery_report">Ei toimitusraporttia</string>
   <string name="no_subject">(Ei otsikkoa)</string>
   <string name="no_subject_view">(Ei otsikkoa)</string>
-  <string name="non_english_subject_limit">13 merkin raja</string>
+  <string name="non_english_subject_limit">13 merkkiä</string>
   <string name="nosend_message">Älä lähetä</string>
   <string name="not_prepare_for_send">Ei lähetettävää viestiä</string>
   <string name="notification_channel_msg_description">Ilmoitukset viesteistä</string>
@@ -428,7 +429,7 @@
   <string name="pref_delivery_ringtone">Toimitetun viestin ääni</string>
   <string name="pref_edit_smsc_address">Lyhytsanomakeskus (SMSC)</string>
   <string name="pref_forward_title">Välitä</string>
-  <string name="pref_hide_verification_code_summary">Piilota viesti-ilmoitukset lukitusnäytöltä, jotka sisältää kertakäyttösalasanoja</string>
+  <string name="pref_hide_verification_code_summary">Piilota kertakäyttösalasanoilla sisältävät viesti-ilmoitukset turvalliselta Lukitusnäytöltä</string>
   <string name="pref_messages_to_save">Aseta tallennettavien viestien määrä</string>
   <string name="pref_mms_settings_title">Multimediaviestit (MMS)</string>
   <string name="pref_msg_trash_bin_title">Poistetut viestit</string>
@@ -453,7 +454,7 @@
   <string name="pref_summary_mms_auto_retrieval">Lataa viesteissä olevat kuvat ja videot automaattisesti</string>
   <string name="pref_summary_mms_read_reports">Näytä ilmoitus keskustelunäkymässä, kun vastaanottajat on ladannut multimediaviestin sisällön</string>
   <string name="pref_summary_mms_retrieval_during_roaming">Lataa viesteissä olevat kuvat ja videot automaattisesti roaming-tilassa</string>
-  <string name="pref_summary_notification_body_enabled">Näytä viestit lukitusnäytöllä ja ilmoitusalueella</string>
+  <string name="pref_summary_notification_body_enabled">Näytä viestit Lukitusnäytöllä ja Ilmoitusalueella</string>
   <string name="pref_summary_off_system_mms_priority">Käytä kolmannen osapuolen sovelluksia multimediaviestien lähettämiseen ja vastaanottamiseen</string>
   <string name="pref_summary_on_system_mms_priority">Aseta MIUI:n viestisovellus oletussovellukseksi multimediaviestien lähettämiseen ja vastaanottamiseen</string>
   <string name="pref_summary_send_delivery_reports">Lähetä vastaanottovahvistus lähettäjälle, kun olet saanut multimediaviestin</string>
@@ -475,7 +476,7 @@
   <string name="pref_title_mms_retrieval_during_national_roaming">Lataa multimediaviestien sisältö kansallisen verkkovierailun yhteydessä</string>
   <string name="pref_title_mms_retrieval_during_roaming">Lataa multimediaviestin sisältö roaming-tilassa</string>
   <string name="pref_title_mms_validity_period">Multimediaviestin vanhentuminen</string>
-  <string name="pref_title_notification_body_enabled">Näytä viestit lukitusnäytöllä</string>
+  <string name="pref_title_notification_body_enabled">Näytä viestit Lukitusnäytöllä</string>
   <string name="pref_title_ringtone_repeat">Ilmoitusäänet</string>
   <string name="pref_title_ringtone_repeat_summary">Toista ilmoitusääni, kun viesti vastaanotetaan näytön ollessa sammutettuna</string>
   <string name="pref_title_send_delivery_reports">Lähetä vastaanottovahvistus</string>
@@ -506,7 +507,7 @@
   <string name="private_message">Yksityinen viestintä</string>
   <string name="private_new_notification">Viestin ilmoitukset</string>
   <string name="private_protect">Yksityisyydensuoja</string>
-  <string name="private_settings">Yksityisten viestien asetukset</string>
+  <string name="private_settings">Asetukset</string>
   <string name="processing">Työskennellään…</string>
   <string name="prvate_contact">Yksityiset yhteystiedot</string>
   <string name="quick_reply">Vastaa</string>
@@ -516,12 +517,13 @@
   <string name="rcs_auto_resume">Jatka keskeytettyjä lähetyksiä automaattisesti</string>
   <string name="rcs_auto_resume_only_by_wifi">Jatka lähetyksiä vain Wi-Fi-yhteydellä</string>
   <string name="rcs_create_new_group">新建群聊</string>
-  <string name="rcs_dspt">China Mobile -käyttäjien käyttöönoton jälkeen, lähetä viestit oletuksena Wi-Fi- tai mobiiliverkolla.</string>
+  <string name="rcs_dspt">Lähetä ja vastaanota viestejä käyttäen Wi-Fi-yhteyttä tai China Mobile -verkkoa</string>
+  <string name="rcs_dspt_unavailable">Tätä ominaisuutta ei voi käyttää tällä hetkellä. China Mobile SIM-kortti ei ole oletuskorttisi.</string>
   <string name="rcs_forward_faild">Välittäminen epäonnistui</string>
   <string name="rcs_forward_successful">Välitettiin onnistuneesti</string>
   <string name="rcs_group_notification_invitation">群邀请</string>
   <string name="rcs_message">China Mobile Viestintä</string>
-  <string name="rcs_message_disable">Tätä viestiä ei voi lukea toisessa tilassa</string>
+  <string name="rcs_message_disable">Tätä viestiä ei voi lukea Toisessa tilassa</string>
   <string name="rcs_msg">China Mobile Viestintä</string>
   <string name="rcs_not_online">China Mobile Viestintää ei voi käyttää. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
   <string name="rcs_offline_hint">China Mobile Viestintä on offline-tilassa. Tätä viestiä ei voi välittää.</string>
@@ -533,6 +535,7 @@
   <string name="rcs_send_rms_remind_change">Asetukset</string>
   <string name="rcs_send_rms_remind_desp">China Mobile Viestintä on pikaviestintäpalvelu, jonka tarjoaa China Mobile. Voit poistaa tämän ominaisuuden käytöstä Asetuksista.</string>
   <string name="rcs_send_rms_remind_title">Lähetä viestejä käyttäen China Mobile Viestintää</string>
+  <string name="rcs_service_agreement">Palvelusopimus</string>
   <string name="rcs_setting">China Mobile Viestinnän asetukset</string>
   <string name="rcs_silence_message">Mykistä viesti-ilmoitukset</string>
   <string name="rcs_summary_auto_resend_mms">Muunna China Mobilen multimediaviestit tekstiviesteiksi alkuperäisen epäonnistuneen viestin lähettämisen jälkeen. Operaattorisi veloittaa sinua tästä viestistä.</string>
@@ -545,9 +548,9 @@
   <string name="recipient_label">"Vastaanottaja: "</string>
   <string name="recipients_over_size">Liian monta vastaanottajaa.</string>
   <string name="recommend_bar_cancel">Hylkää</string>
-  <string name="recommend_bar_message_mx">Mi Viestin avulla voit lähettää viestejä toisiin MIUI-laitteisiin ilman maksuja.</string>
-  <string name="recommend_bar_message_mx_rcs">Mi Viestin avulla voit lähettää viestejä toisiin MIUI-laitteisiin ja China Mobile:n käyttäjille ilman maksuja.</string>
-  <string name="recommend_bar_message_rcs">China Mobile Viestinnän avulla voit lähettää viestejä toisille China Mobile käyttäjille ilman maksuja.</string>
+  <string name="recommend_bar_message_mx">Mi Viestin avulla voit lähettää viestejä toisiin MIUI-käyttäjille ilman maksuja.</string>
+  <string name="recommend_bar_message_mx_rcs">Mi Viestin avulla voit lähettää viestejä toisiin MIUI-käyttäjille ja China Mobile:n käyttäjille Mannerkiinassa ilman maksuja.</string>
+  <string name="recommend_bar_message_rcs">China Mobile Viestinnän avulla voit lähettää viestejä toisille China Mobile käyttäjille Mannerkiinassa ilman maksuja.</string>
   <string name="recommend_bar_message_smart_message">Kopioi kertakäyttösalasanat, seuraa pakettejasi, käytä älyvalikkoja ja paljon muuta</string>
   <string name="recommend_bar_ok">Ota käyttöön</string>
   <string name="recommend_bar_title_mx_rcs">Mi Viesti</string>
@@ -718,7 +721,7 @@
   <string name="timed_message_to">Vastaanottaja</string>
   <string name="title_allow_network_access">Päivitä tieto automaattisesti</string>
   <string name="title_collapse_sp_messages">Ryhmitä ilmoitukset</string>
-  <string name="title_hide_verification_code">Piilota salasanaviestit lukitusnäytöltä automaattisesti</string>
+  <string name="title_hide_verification_code">Piilota kertakäyttösalasanaviestit Lukitusnäytöltä automaattisesti</string>
   <string name="title_show_blocked_messages">Näytä estetyt tekstiviestit</string>
   <string name="title_show_list_avatar">Näytä profiilikuvat</string>
   <string name="title_show_photo_word">Aseta yhteystiedoille kuvat</string>
