--- a/Finnish/main/HTMLViewer.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/HTMLViewer.apk/res/values-fi-rFI/strings.xml
@@ -9,10 +9,11 @@
   <string name="license_host_unreachable">Verkkoyhteyttä ei voi muodostaa. Nähdäksesi tämän tiedon nyt, mene %s toisella yhdistetyllä laitteella.</string>
   <string name="loading">Odota hetki…</string>
   <string name="mibi_license">Mi Krediittien Käyttöehdot</string>
-  <string name="open_wifi_connect_and_use_data_summary">jatka yhteyden käyttämistä, napauta vaihteeksesi Wi-Fi-yhteyteen ja vahvistaaksesi.</string>
+  <string name="open_wifi_connect_and_use_data_summary">Käytetään mobiilidataa. Vaihda Wi-Fi-yhteyteen napauttamalla.</string>
   <string name="open_wifi_connect_summary">Napauta nähdäksesi tiedot.</string>
   <string name="open_wifi_connect_title">Yhdistetty kohteeseen %1$s</string>
   <string name="permdesc_accessDrm">Sallii sovelluksen käyttää DRM-suojattua sisältöä.</string>
+  <string name="poco_privacy_policy">POCO Launcher Tietosuojakäytäntö &amp; POCO Launcher Käyttöehdot</string>
   <string name="policy_name">Protokolla: %s</string>
   <string name="pre_installed_apps">Esiasennetut sovellukset</string>
   <string name="settings_ad_loading">Odota hetki…</string>
