--- a/Finnish/main/MiuiBluetooth.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiBluetooth.apk/res/values-fi-rFI/strings.xml
@@ -17,6 +17,20 @@
   <string name="bluetooth_search_for_devices">Etsi laitteista</string>
   <string name="device_picker">Bluetooth laitteen asetukset</string>
   <string name="disconnect">Katkaise yhteys</string>
+  <string name="fast_connect_device_box">Laatikko</string>
+  <string name="fast_connect_device_box_name">%1$s Laatikko</string>
+  <string name="fast_connect_device_connect_cancel">Peruuta</string>
+  <string name="fast_connect_device_connect_ok">Yhdistä</string>
+  <string name="fast_connect_device_connect_retry">Yritä uudelleen</string>
+  <string name="fast_connect_device_connect_setup">Asetukset</string>
+  <string name="fast_connect_device_connect_success">Valmis</string>
+  <string name="fast_connect_device_headset_l">Vasen</string>
+  <string name="fast_connect_device_headset_r">Oikea</string>
+  <string name="fast_connect_device_headset_reset">Paina pohjassa laatikon painiketta</string>
+  <string name="fast_connect_device_title_connect_fail">Laitetta %1$s ei voitu yhdistää</string>
+  <string name="fast_connect_device_title_connecting">Yhdistetään…</string>
+  <string name="fast_connect_device_title_find_headset">Löydä kuuloke %1$s</string>
+  <string name="fast_connect_device_title_find_headset_others">Löydä kuuloke %1$s muut</string>
   <string name="goto_package">Avaa %1$s</string>
   <string name="install_package">Asenna %1$s lisätoimintoja varten</string>
   <string name="mi_band_vibrate_alarm">Värise kun hälytys soi</string>
