--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,14 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- 8.9.17 -->
+  <string name="fps960_toast">Hidastettu tallennus aloitetaan, kun ajastin saavuttaa valkoisen pisteen</string>
+  <string name="module_name_new_slow_motion">Hidastus</string>
+  <string name="portrait_mode_use_hint_for_bokeh">"Kokeile Muotokuva-tilaa.
+Pitää kohteen terävänä ja sumentaa taustan."</string>
+  <string name="pref_new_slow_motion_video_quality_240_720only">Voit nauhoittaa vain 720p-videoita 240fps valittuna</string>
+  <string name="pref_new_slow_motion_video_quality_entry_1080p">FHD 1080p</string>
+  <string name="pref_new_slow_motion_video_quality_entry_720p">HD 720p</string>
+  <!-- // 8.9.17 // -->
   <!-- miui 10 valmis -->
   <string name="accessibility_ai_scene_off">AI kamera pois käytöstä</string>
   <string name="accessibility_ai_scene_on">AI kamera käytössä</string>
@@ -60,7 +69,7 @@
   <string name="ai_scene_mode_use_hint_text">"AI-kamera tunnistaa näkymän automaattisesti
 ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="audio_focus_exit_button_text">Poista Äänitarkennus käytöstä</string>
-  <string name="back_bokeh_use_hint">Varmista, että kohde ei ole kauempana, kuin 1,5 metriä.</string>
+  <string name="back_bokeh_use_hint">Pidä kohde 1,5 metrin sisällä parhaan tehosteen saamiseksi</string>
   <string name="beauty_fragment_tab_name_3d_beauty">Kauneus</string>
   <string name="beauty_fragment_tab_name_3d_makeup">Meikki</string>
   <string name="beauty_fragment_tab_name_3d_remodeling">Muotoillaan uudelleen</string>
@@ -482,12 +491,12 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_video_focusmode_entry_continuous">CAF (automaattitarkennus)</string>
   <string name="pref_video_focusmode_title">Tarkennustila</string>
   <string name="pref_video_hfr_title">Video HFR</string>
-  <string name="pref_video_quality_entry_1080p">FHD 1080P, 30fps</string>
-  <string name="pref_video_quality_entry_1080p_60fps">FHD 1080P, 60fps</string>
-  <string name="pref_video_quality_entry_480p">SD 480P, 30fps</string>
+  <string name="pref_video_quality_entry_1080p">FHD 1080p, 30fps</string>
+  <string name="pref_video_quality_entry_1080p_60fps">FHD 1080p, 60fps</string>
+  <string name="pref_video_quality_entry_480p">SD 480p, 30fps</string>
   <string name="pref_video_quality_entry_4kuhd">UHD 4K, 30fps</string>
   <string name="pref_video_quality_entry_4kuhd_60fps">UHD 4K, 60fps</string>
-  <string name="pref_video_quality_entry_720p">HD 720P, 30fps</string>
+  <string name="pref_video_quality_entry_720p">HD 720p, 30fps</string>
   <string name="pref_video_quality_entry_fwvga">FWVGA</string>
   <string name="pref_video_quality_entry_vga">VGA</string>
   <string name="pref_video_quality_entry_wqvga">WQVGA</string>
