--- a/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Provision.apk/res/values-fi-rFI/strings.xml
@@ -1,5 +1,16 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <!-- 8.9.17 -->
+  <string name="ai_button_desc">Käytä tätä painiketta käynnistääksesi Mi AI:n ja suorita tehtäviä puhelimellasi käyttäen vain ääntäsi</string>
+  <string name="ai_button_double_press">Tuplanapauta</string>
+  <string name="ai_button_double_press_desc">Määritä Mi AI ominaisuudet</string>
+  <string name="ai_button_long_press">Paina ja pidä pohjassa</string>
+  <string name="ai_button_long_press_desc">Sano komentosi ja vapauta painike</string>
+  <string name="ai_button_single_press">Paina</string>
+  <string name="ai_button_single_press_desc">Käynnistä Mi AI</string>
+  <string name="ai_button_title">Tietoja AI-painikkeesta</string>
+  <string name="poco_agree_terms_other">(Mukaan lukien POCO Launcher Tietosuojakäytäntö ja Käyttöehdot)</string>
+  <!-- // 8.9.17 -->
   <string name="accessibility_enabled">Esteettömyys käytössä.</string>
   <string name="agree">Hyväksy</string>
   <string name="agree_terms">Olen lukenut ja hyväksyn Palveluehdot ja Tietosuojakäytännön.</string>
