--- a/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/XiaomiAccount.apk/res/values-fi-rFI/strings.xml
@@ -24,7 +24,7 @@
   <string name="account_error_user_name">Syöttämäsi nimi on virheellinen</string>
   <string name="account_global_region">Ulkomailla</string>
   <string name="account_has_been_set">Vaihda</string>
-  <string name="account_invalid_user_avatar">Kuva on virheellinen</string>
+  <string name="account_invalid_user_avatar">Tämä kuva on virheellinen. Kokeile toista kuvaa.</string>
   <string name="account_limit_update_birthday">Syntymäpäivää ei voi juuri nyt päivittää</string>
   <string name="account_mibi_center">Mi Krediitit</string>
   <string name="account_mibi_charge">Top up</string>
